--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     ]
   , "main"            : "level-packager.js"
   , "dependencies"    : {
-        "levelup"         : "~0.18.0"
+        "levelup"         : "^0.19.0"
     }
   , "license"         : "MIT"
 }
