--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "dependencies": {
     "levelup": "~0.19.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "level": "^0.19.1",
+    "tape": "^4.0.0"
+  }
 }
