--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "type": "git",
     "url": "https://github.com/Level/packager.git"
   },
+  "scripts": {
+    "test": "node test.js"
+  },
   "homepage": "https://github.com/Level/level-packager",
   "keywords": [
     "leveldb",
