rename repo to packager. closes #14

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Level/level-packager.git"
+    "url": "https://github.com/Level/packager.git"
   },
   "homepage": "https://github.com/Level/level-packager",
   "keywords": [
