--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "node test.js"
   },
-  "homepage": "https://github.com/Level/level-packager",
+  "homepage": "https://github.com/Level/packager",
   "keywords": [
     "leveldb",
     "stream",
@@ -36,11 +36,11 @@
   ],
   "main": "level-packager.js",
   "dependencies": {
-    "levelup": "~0.19.0"
+    "levelup": "~1.0.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "level": "^0.19.1",
+    "leveldown": "~1.0.6",
     "tape": "^4.0.0"
   }
 }
