--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   ],
   "main": "level-packager.js",
   "dependencies": {
-    "levelup": "~1.3.0"
+    "encoding-down": "~2.1.5",
+    "levelup": "2.0.0-rc1"
   },
   "license": "MIT",
   "devDependencies": {
