--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "url": "https://github.com/Level/packager.git"
   },
   "scripts": {
-    "test": "standard && node test.js"
+    "test": "standard && node test.js",
+    "remark": "remark README.md CHANGELOG.md CONTRIBUTORS.md UPGRADING.md -o"
+  },
+  "remarkConfig": {
+    "plugins": [
+      [
+        "remark-git-contributors",
+        "level-community"
+      ],
+      [
+        "remark-github"
+      ]
+    ]
   },
   "homepage": "https://github.com/Level/packager",
   "keywords": [
@@ -26,6 +38,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "level-community": "^3.0.0",
+    "remark-cli": "^5.0.0",
+    "remark-git-contributors": "^0.2.2",
+    "remark-github": "^7.0.3",
     "standard": "^11.0.0",
     "tape": "^4.0.0"
   },
