--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/Level/packager.git"
   },
   "scripts": {
-    "test": "standard && node test.js",
+    "test": "standard && nyc node test.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "remark": "remark README.md CHANGELOG.md CONTRIBUTORS.md UPGRADING.md -o"
   },
   "remarkConfig": {
@@ -38,7 +39,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "level-community": "^3.0.0",
+    "nyc": "^12.0.2",
     "remark-cli": "^5.0.0",
     "remark-git-contributors": "^0.2.2",
     "remark-github": "^7.0.3",
