--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "main": "level-packager.js",
   "dependencies": {
-    "encoding-down": "~6.0.0",
+    "encoding-down": "^6.0.0",
     "levelup": "^4.0.0"
   },
   "license": "MIT",
