Add 'level' to package keywords

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Level/packager",
   "keywords": [
+    "level",
     "leveldb",
     "stream",
     "database",
