--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "level-packager.js",
   "scripts": {
     "test": "standard && hallmark && nyc node test.js",
+    "test-browsers-local": "airtap test.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "hallmark": "hallmark --fix",
     "dependency-check": "dependency-check . test.js abstract/*.js",
@@ -24,6 +25,8 @@
     "levelup": "^4.3.2"
   },
   "devDependencies": {
+    "airtap": "^4.0.3",
+    "airtap-playwright": "^1.0.1",
     "coveralls": "^3.0.2",
     "dependency-check": "^3.3.0",
     "hallmark": "^3.1.0",
