--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "standard && hallmark && nyc node test.js",
     "test-browsers-local": "airtap test.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report -r lcovonly",
     "hallmark": "hallmark --fix",
     "dependency-check": "dependency-check . test.js abstract/*.js",
     "prepublishOnly": "npm run dependency-check"
